# Diane

./: .gitignore  Makefile  index.html  package-lock.json  package.json
.claude/: launch.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/scripts/: audio-events.py  capture-desktop-audio.swift  live-transcribe.swift  post-build.sh  tts-synthesize.py
src-tauri/src/: lib.rs  meeting_detector.rs  setup.rs  state.rs
src-tauri/src/audio/: desktop_capture.rs  events.rs  mixer.rs  mod.rs  models.rs  playback.rs  recorder.rs  transcribe.rs
src-tauri/src/commands/: dictation.rs  mod.rs  playback.rs  recording.rs  system.rs  tapes.rs  ui.rs
src/components/: CassetteLibrary.css  CassetteLibrary.tsx  Header.css  Header.tsx  Recorder.css  Recorder.tsx  RecorderButton.tsx  TranscriptOverlay.css  TranscriptOverlay.tsx
src/hooks/: useDictation.ts  useGlobalHotkeys.ts  useModelDownload.ts  usePlayback.ts  useRecorder.ts  useTapeLibrary.ts
