[package]
name = "diane"
version = "0.5.2"
description = "Diane — Retro voice recorder with live transcription"
authors = ["Matt Wisniewski"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
cpal = "0.15"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio = { version = "1", features = ["process", "fs"] }
enigo = "0.6"
whisper-rs = "0.16"
ureq = "2"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tauri-plugin-notification = "2"
rodio = "0.19"
